--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="capstoneProject">
-                
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
-        <property name="context-root" value="capstoneProject"/>
-                
-        <property name="java-output-path" value="/capstoneProject/build/classes"/>
             
-    </wb-module>
     
+    <wb-module deploy-name="GetWell-GetFit">
+                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                        
+        
+        <property name="java-output-path" value="/GetWell-GetFit/build/classes"/>
+        <property name="context-root" value="GetWell-GetFit"/>
+                    
+    
+    </wb-module>
+        
+
 </project-modules>
